--- a/datatags-app/app/views/interview/accepted.scala.html
+++ b/datatags-app/app/views/interview/accepted.scala.html
@@ -2,7 +2,7 @@
 @import edu.harvard.iq.datatags.model.values.AtomicValue
 @( qKit:PolicyModelVersionKit,
    dataTags: edu.harvard.iq.datatags.model.values.CompoundValue,
-   codeTag: Option[edu.harvard.iq.datatags.model.values.TagValue],
+   codeTag: Option[edu.harvard.iq.datatags.model.values.AbstractValue],
    requestedInterview: Option[RequestedInterviewSession],
    answerHistory: Seq[AnswerRecord],
    loc:Option[Localization]
