--- a/datatags-app/app/views/interview/question.scala.html
+++ b/datatags-app/app/views/interview/question.scala.html
@@ -88,7 +88,7 @@
             </div>
             <div class="panel-body">
                 <ul class="list-unstyled">
-                    @if( dataTags.getNonEmptySubSlotTypes.isEmpty ) {
+                    @if( dataTags.getNonEmptySubSlots.isEmpty ) {
                         <div class="well well-sm text-center">
                             <span class="muted small">This space will contain the resultant policy. It will be updated as we go along.</span>
                         </div>    
