--- a/datatags-app/app/views/comps/modelVersionMetadataTable.scala.html
+++ b/datatags-app/app/views/comps/modelVersionMetadataTable.scala.html
@@ -7,7 +7,7 @@
         <th>Authors</th>
         <td>
           <ul class="authorList">
-          @for( a<-md.getAuthors ){<li>@comps.author(a)</li>}
+          @for( a<-md.getAuthors ){<li> @comps.author(a)</li>}
           </ul>
         </td>
       </tr>
@@ -15,7 +15,7 @@
     @for( doi <- Option(md.getDoi) ) {
       <tr>
         <th>DOI</th>
-        <td>@doi</td>
+        <td><a href="http://dx.doi.org/@doi">@doi</a></td>
       </tr>
     }
     @for( version <- Option(md.getVersion) ) {
@@ -46,7 +46,7 @@
               <h6>
                 @for(url<-Option(ref.getUrl)){
                   <a href="@url" target="_blank">@url</a>}
-                @for(doi<-Option(ref.getDoi)){ (doi:@doi)}
+                @for(doi<-Option(ref.getDoi)){ doi:<a href="http://dx.doi.org/@doi" target="_blank">@doi</a>}
               </h6>
               @ref.getText
             </li>
