--- a/datatags-app/app/views/interview/question.scala.html
+++ b/datatags-app/app/views/interview/question.scala.html
@@ -15,119 +15,126 @@
 @import views.Helpers
 
 @templates.bsNavBar( "Question", 'tag, scripts) {
-
-<div class="row">
+  <div class="row">
     <div class="col-md-12">
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <h3 class="panel-title clearfix">
-                  @if( pmvKit.dbData.commentingStatus != CommentingStatus.Closed ) {
-                    <div class="pull-right">
-                    @comps.comments("cmnt", pmvKit.dbData.parentId, pmvKit.dbData.version, loc.map(_.getLanguage),
-                                    "node", questionNode.getId)
-                    </div>}
-                  Question: Please select one answer
-                </h3>
-            </div>
-            <div class="panel-body">
-                <span class="questionText">
-                  @defining( loc.map(l=>l.getNodeText(questionNode.getId)).getOrElse(java.util.Optional.empty) ){ nodeTextOpt =>
-                    @if( nodeTextOpt.isPresent ) {
-                      @Helpers.renderMarkdown( nodeTextOpt.get )
+      <a href="@routes.InterviewCtrl.startInterview(pmvKit.id.modelId, pmvKit.id.version, loc.map(_.getLanguage))">
+        <i class="fa fa-arrow-left"></i> Intro
+      </a>
+      <br>
+    </div>
+  </div>
+  <div class="row">
+  <div class="col-md-12">
+      <div class="panel panel-primary">
+          <div class="panel-heading">
+              <h3 class="panel-title clearfix">
+                @if( pmvKit.dbData.commentingStatus != CommentingStatus.Closed ) {
+                  <div class="pull-right">
+                  @comps.comments("cmnt", pmvKit.dbData.parentId, pmvKit.dbData.version, loc.map(_.getLanguage),
+                                  "node", questionNode.getId)
+                  </div>}
+                Question: Please select one answer
+              </h3>
+          </div>
+          <div class="panel-body">
+              <span class="questionText">
+                @defining( loc.map(l=>l.getNodeText(questionNode.getId)).getOrElse(java.util.Optional.empty) ){ nodeTextOpt =>
+                  @if( nodeTextOpt.isPresent ) {
+                    @Helpers.renderMarkdown( nodeTextOpt.get )
 
-                    }else{
-                      @Helpers.bulletPoint(questionNode.getText)</span>
-                      @if( ! questionNode.getTermNames.isEmpty() ) {
-                          <h4 class="text-muted">Terms</h4>
-                          <dl>
-                              @for( termName <- questionNode.getTermNames ) {
-                                  <dt>@termName</dt>
-                                  <dl>@Helpers.bulletPoint(questionNode.getTermText(termName))</dl>
-                              }
-                          </dl>
-                      }
+                  }else{
+                    @Helpers.bulletPoint(questionNode.getText)</span>
+                    @if( ! questionNode.getTermNames.isEmpty() ) {
+                        <h4 class="text-muted">Terms</h4>
+                        <dl>
+                            @for( termName <- questionNode.getTermNames ) {
+                                <dt>@termName</dt>
+                                <dl>@Helpers.bulletPoint(questionNode.getTermText(termName))</dl>
+                            }
+                        </dl>
                     }
                   }
+                }
 
-            </div>
-            <div class="panel-footer">
-                @helper.form( action=routes.InterviewCtrl.answer(pmvKit.id.modelId, pmvKit.id.version, questionNode.getId), 'id->"answerForm" ) {
-                    @for( ans <- questionNode.getAnswers ) {
-                        <button class="btn btn-default"
-                                onclick="$('#answerText')[0].value='@ans.getAnswerText'; $('#answerForm').submit();" >
-                                @loc.map( l=>l.localizeAnswer(ans.getAnswerText)).getOrElse(Helpers.makeUpper(ans.getAnswerText))</button>
-                    }
-                    <input type="hidden" name="answerText" id="answerText" value="" />
-                    <input type="hidden" name="serializedHistory" id="serializedHistory" value="@pmvKit.serializer.encode(answerHistory)"/>
-                }
-            </div>
-        </div>
-    </div>
+          </div>
+          <div class="panel-footer">
+              @helper.form( action=routes.InterviewCtrl.answer(pmvKit.id.modelId, pmvKit.id.version, questionNode.getId), 'id->"answerForm" ) {
+                  @for( ans <- questionNode.getAnswers ) {
+                      <button class="btn btn-default"
+                              onclick="$('#answerText')[0].value='@ans.getAnswerText'; $('#answerForm').submit();" >
+                              @loc.map( l=>l.localizeAnswer(ans.getAnswerText)).getOrElse(Helpers.makeUpper(ans.getAnswerText))</button>
+                  }
+                  <input type="hidden" name="answerText" id="answerText" value="" />
+                  <input type="hidden" name="serializedHistory" id="serializedHistory" value="@pmvKit.serializer.encode(answerHistory)"/>
+              }
+          </div>
+      </div>
+  </div>
 </div>
 <div class="row">
-    <div class="col-md-6">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Answer Feed</h3>
-            </div>
-            <div class="panel-body">
-                @if( answerHistory.nonEmpty ) {
-                    @comps.answerHistory(answerHistory, pmvKit.id, reverse=true, pmvKit.serializer, loc)
-                } else {
-                    <div class="well well-sm text-center">
-                        <span class="muted small">This space will contain your answers, and will allow you to revisit them when needed.</span>
-                    </div>
-                }
-            </div>
-        </div>
-    </div>
-    <div class="col-md-6">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Current Tags</h3>
-            </div>
-            <div class="panel-body">
-                <ul class="list-unstyled">
-                    @if( dataTags.getNonEmptySubSlots.isEmpty ) {
-                        <div class="well well-sm text-center">
-                            <span class="muted small">This space will contain the resultant policy. It will be updated as we go along.</span>
-                        </div>    
-                    } else {
-                        @comps.tagValue(dataTags, loc)
-                    }
-                </ul>
-            </div>
-        </div>
-    </div>
+  <div class="col-md-6">
+      <div class="panel panel-default">
+          <div class="panel-heading">
+              <h3 class="panel-title">Answer Feed</h3>
+          </div>
+          <div class="panel-body">
+              @if( answerHistory.nonEmpty ) {
+                  @comps.answerHistory(answerHistory, pmvKit.id, reverse=true, pmvKit.serializer, loc)
+              } else {
+                  <div class="well well-sm text-center">
+                      <span class="muted small">This space will contain your answers, and will allow you to revisit them when needed.</span>
+                  </div>
+              }
+          </div>
+      </div>
+  </div>
+  <div class="col-md-6">
+      <div class="panel panel-default">
+          <div class="panel-heading">
+              <h3 class="panel-title">Current Tags</h3>
+          </div>
+          <div class="panel-body">
+              <ul class="list-unstyled">
+                  @if( dataTags.getNonEmptySubSlots.isEmpty ) {
+                      <div class="well well-sm text-center">
+                          <span class="muted small">This space will contain the resultant policy. It will be updated as we go along.</span>
+                      </div>
+                  } else {
+                      @comps.tagValue(dataTags, loc)
+                  }
+              </ul>
+          </div>
+      </div>
+  </div>
 </div>
 <div class="row">
-    <div class="col-md-12">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Engine Trace</h3>
-                <small>Useful for debugging the interview</small>
-            </div>
-            <div class="panel-body">
-                <div class="engine-trace-container">
-                    <table class="engine-trace">
-                        <thead>
-                            <tr>
-                                <th>Id</th>
-                                <th>Type</th>
-                                <th>Info</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                        @for( nd <- history.reverse ){
-                            <tr>
-                                @comps.node(nd)
-                            </tr>
-                        }
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
+  <div class="col-md-12">
+      <div class="panel panel-default">
+          <div class="panel-heading">
+              <h3 class="panel-title">Engine Trace</h3>
+              <small>Useful for debugging the interview</small>
+          </div>
+          <div class="panel-body">
+              <div class="engine-trace-container">
+                  <table class="engine-trace">
+                      <thead>
+                          <tr>
+                              <th>Id</th>
+                              <th>Type</th>
+                              <th>Info</th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                      @for( nd <- history.reverse ){
+                          <tr>
+                              @comps.node(nd)
+                          </tr>
+                      }
+                      </tbody>
+                  </table>
+              </div>
+          </div>
+      </div>
+  </div>
 </div>
 }
