--- a/datatags-app/app/views/interview/question.scala.html
+++ b/datatags-app/app/views/interview/question.scala.html
@@ -25,50 +25,9 @@
   </div>
   <div class="row">
   <div class="col-md-12">
-      <div class="panel panel-primary">
-          <div class="panel-heading">
-              <h3 class="panel-title clearfix">
-                @if( pmvKit.dbData.commentingStatus != CommentingStatus.Closed ) {
-                  <div class="pull-right">
-                  @comps.comments("cmnt", pmvKit.dbData.parentId, pmvKit.dbData.version, loc.map(_.getLanguage),
-                                  "node", questionNode.getId)
-                  </div>}
-                Question: Please select one answer
-              </h3>
-          </div>
-          <div class="panel-body">
-              <span class="questionText">
-                @defining( loc.map(l=>l.getNodeText(questionNode.getId)).getOrElse(java.util.Optional.empty) ){ nodeTextOpt =>
-                  @if( nodeTextOpt.isPresent ) {
-                    @Helpers.renderMarkdown( nodeTextOpt.get )
-
-                  }else{
-                    @Helpers.bulletPoint(questionNode.getText)</span>
-                    @if( ! questionNode.getTermNames.isEmpty() ) {
-                        <h4 class="text-muted">Terms</h4>
-                        <dl>
-                            @for( termName <- questionNode.getTermNames ) {
-                                <dt>@termName</dt>
-                                <dl>@Helpers.bulletPoint(questionNode.getTermText(termName))</dl>
-                            }
-                        </dl>
-                    }
-                  }
-                }
-
-          </div>
-          <div class="panel-footer">
-              @helper.form( action=routes.InterviewCtrl.answer(pmvKit.id.modelId, pmvKit.id.version, questionNode.getId), 'id->"answerForm" ) {
-                  @for( ans <- questionNode.getAnswers ) {
-                      <button class="btn btn-default"
-                              onclick="$('#answerText')[0].value='@ans.getAnswerText'; $('#answerForm').submit();" >
-                              @loc.map( l=>l.localizeAnswer(ans.getAnswerText)).getOrElse(Helpers.makeUpper(ans.getAnswerText))</button>
-                  }
-                  <input type="hidden" name="answerText" id="answerText" value="" />
-                  <input type="hidden" name="serializedHistory" id="serializedHistory" value="@pmvKit.serializer.encode(answerHistory)"/>
-              }
-          </div>
-      </div>
+   @comps.questionPanel(
+     questionNode, pmvKit, loc, answerHistory, pmvKit.dbData.commentingStatus != CommentingStatus.Closed, interactive=true
+   )
   </div>
 </div>
 <div class="row">
