--- a/datatags-app/app/views/interview/rejected.scala.html
+++ b/datatags-app/app/views/interview/rejected.scala.html
@@ -11,19 +11,7 @@
 @templates.bsNavBar("Dataset Rejected", 'tag) {
   <div class="row">
     <div class="col-md-12">
-      <div class="panel panel-danger">
-        <div class="panel-heading">
-          <h3 class="panel-title clearfix">
-            @if( pmvKit.dbData.commentingStatus != CommentingStatus.Closed ) {
-              <div class="pull-right">
-              @comps.comments("cmnt", pmvKit.dbData.parentId, pmvKit.dbData.version, loc.map(_.getLanguage), "node", node.getId)
-              </div>}
-            Rejection</h3>
-        </div>
-        <div class="panel-body">
-          @loc.flatMap( l=>o2o(l.getNodeText(node.getId)).map(renderMarkdown) ).getOrElse( Html(node.getReason))
-        </div>
-      </div>
+      @comps.rejectPanel(node, pmvKit, loc, answerHistory, pmvKit.dbData.commentingStatus != CommentingStatus.Closed)
     </div>
   </div>
   <div class="row">
