Upgrade to Play 2.6.6

--- a/datatags-app/app/views/backoffice/versionedPolicyModelViewer.scala.html
+++ b/datatags-app/app/views/backoffice/versionedPolicyModelViewer.scala.html
@@ -4,6 +4,7 @@
 @scripts ={
   @if(versions.map(_._2).exists(_.isEmpty)){
     <script language="Javascript">
+      console.log("missing models detected. Will reload window");
       window.setTimeout( function(){ window.location.reload(); }, 3000 );
     </script>
   }
