Removed some activator legacy, updated DataTagsLib, footer styling

--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -255,6 +255,14 @@ footer {
   font-size: 0.8em;
   border-top: 1px solid #888;
   text-align: center;
+
+  ul li {
+    color: #888;
+    text-align: left;
+    img {
+      vertical-align: text-bottom;
+    }
+  }
 }
 .pre-release-warn {
   color: red;
