--- a/datatags-app/app/views/templates/bsBase.scala.html
+++ b/datatags-app/app/views/templates/bsBase.scala.html
@@ -35,12 +35,13 @@
   <footer>
     <div class="container">
       <span class="pre-release-warn">
-        <i class="fa fa-warning fa-lg"></i> Project is in Beta. Don't use the tags as a legal recommendation.
+        <i class="fa fa-warning fa-lg"></i>Do not use the tags as a legal recommendation.
       </span>
       <br>
       <br>
       <ul class="list-inline">
-        <li>PolicyModels/DataTags project. &copy; 2017 by the President and Fellows of Harvard College.</li>
+        <li>PolicyModels/DataTags project: <a href="http://datatags.org">datatags.org</a>.<br>
+            &copy; 2017 by the President and Fellows of Harvard College.</li>
         <li><a data-toggle="tooltip" data-placement="top" title="National Science Foundation" href="http://nsf.gov" target="_blank"><img src="/assets/images/nsf-logo-small.png" alt="NSF logo" /></a></li>
         <li><a data-toggle="tooltip" data-placement="top" title="The Dataverse Project" href="http://thedata.org" target="_blank"><img src="/assets/images/dvn-logo-small.png" alt="Dataverse logo" /></a></li>
         <li><a data-toggle="tooltip" data-placement="top" title="Data Privacy Lab, IQSS at Harvard University" href="http://dataprivacylab.org/" target="_blank"><img src="/assets/images/dpl-logo-small.png" alt="Data Privacy Lab logo" /></a></li>
