--- a/datatags-app/app/views/backoffice/versionedPolicyModelViewer.scala.html
+++ b/datatags-app/app/views/backoffice/versionedPolicyModelViewer.scala.html
@@ -13,6 +13,7 @@
         JsUtils.fillAccessLinks();
     })
   </script>
+  <script src="@routes.Assets.at("js/DeleteVersion.js")"></script>
 }
 
 @templates.backend("Versioned Policy Model Editor", 'backOffice, scripts ) {
@@ -94,6 +95,9 @@
                 <td>@Helpers.dateTimeFormat(v._1.lastUpdate)</td>
                 <td>
                   <a class="btn btn-default btn-sm" href="@routes.PolicyKitManagementCtrl.showEditVersionPage(v._1.parentId, v._1.version)"><i class="fa fa-edit"></i> Edit</a>
+                  <button class="btn btn-default" onclick="DeleteVersion.deleteVersion('@v._1.parentId', '@v._1.version')">
+                    <i class="fa fa-trash-o"></i> Delete
+                  </button>
                   @v._2 match {
                     case None      => {<button type="button" class="btn btn-default" disabled>Processing...</button>}
                     case Some(kit) => {@if(kit.canRun){<a class="btn btn-primary btn-sm" href="@routes.InterviewCtrl.interviewIntro(v._1.parentId, v._1.version)"><i class="fa fa-play"></i> Run</a>}}
