--- a/datatags-app/app/views/comps/author.scala.html
+++ b/datatags-app/app/views/comps/author.scala.html
@@ -5,6 +5,7 @@
   @p.getName@if(p.getAffiliation!=null && p.getAffiliation.nonEmpty){ <em>@p.getAffiliation</em> }<br>
   @if(p.getEmail!=null && p.getEmail.nonEmpty){ <small><a href="mailto:@p.getEmail">@p.getEmail</a></small> }
   @if(p.getOrcid!=null && p.getOrcid.nonEmpty){ <small>ORCiD: <a href="http://orcid.org/@p.getOrcid">@p.getOrcid</a></small> }
+  @if(p.getUrl!=null && p.getUrl.nonEmpty){ <small> URL: <a href=@p.getUrl>@p.getUrl</a></small> }
 }
 
 @group( g:GroupAuthorData ) = {
