--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -324,12 +324,20 @@ footer {
 
   li {
     display: inline-block;
-    margin: 4px;
+    &:first-child {
+      a {
+        border-radius: 5px 0 0 5px;
+      }
+    }
+    &:last-child {
+      a {
+        border-radius: 0 5px 5px 0;
+      }
+    }
 
     a {
-      border-radius: 4px;
       padding: 4px;
-      border: 1px solid #888;
+      border: 1px solid rgba(0,0,0,.25);
       background-color: #DDD;
     }
     a:hover {
@@ -451,4 +459,12 @@ div.help {
   box-shadow: 0 4px 8px rgba(0,0,0,0.5) inset;
   background-color: #0000004d;
   border-radius: 4px;
+}
+
+ul.localizations {
+  list-style: none;
+  li {
+    display: inline-block;
+    margin: .5em auto;
+  }
 }
