--- a/datatags-app/app/views/comps/author.scala.html
+++ b/datatags-app/app/views/comps/author.scala.html
@@ -3,14 +3,13 @@
 
 @person( p:PersonAuthorData ) = {
 @if(p.getUrl!=null && p.getUrl.trim.nonEmpty){
-  <em><a href="@p.getUrl">@p.getName</a></em>
+  <a href="@p.getUrl">@p.getName</a>
 }else{
-  <em>@p.getName</em>
+  @p.getName
 }
-  @p.getName@if(p.getAffiliation!=null && p.getAffiliation.nonEmpty){ <em>@p.getAffiliation</em> }<br>
-  @if(p.getEmail!=null && p.getEmail.nonEmpty){ <small><a href="mailto:@p.getEmail">@p.getEmail</a></small> }
-  @if(p.getOrcid!=null && p.getOrcid.nonEmpty){ <small>ORCiD: <a href="http://orcid.org/@p.getOrcid">@p.getOrcid</a></small> }
-
+  @Helpers.nonEmpty(p.getAffiliation){ affiliation => <em>@affiliation</em> }<br>
+  @Helpers.nonEmpty(p.getEmail){ email => <small><a href="mailto:@email">@email</a></small> }
+  @Helpers.nonEmpty(p.getOrcid){ orcid => <small>ORCiD: <a href="http://orcid.org/@p.getOrcid">@p.getOrcid</a></small> }
 }
 
 @group( g:GroupAuthorData ) = {
