--- a/datatags-app/app/views/interview/intro.scala.html
+++ b/datatags-app/app/views/interview/intro.scala.html
@@ -65,7 +65,7 @@
         @comps.kitMessageList(qKit.messages)
         </ul>
       }
-      @defining( qKit.availableVisualizations ) { avz =>
+      @defining( qKit.availableVisualizations(qKit.id.modelId + "~" + qKit.id.version) ) { avz =>
         @if( avz.hasData){
           <h3>Visualizations</h3>
           <div class="row">
@@ -74,7 +74,7 @@
                 <strong>Decision Graph:</strong>
                 <ul class="visualizationList">
                   @for(p <- avz.decisionGraph) {
-                    <li><a href="@routes.Application.visualizationFile(qKit.id.modelId + "/" + qKit.id.version + "/" + p.getFileName)">@p.getFileName.toString.split("\\.").last</a></li>
+                    <li><a href="@routes.Application.visualizationFile(p.getFileName + "")">@p.getFileName.toString.split("\\.").last</a></li>
                   }
                 </ul>
               }
@@ -84,7 +84,7 @@
                 <strong>Policy Space:</strong>
                 <ul class="visualizationList">
                   @for(p <- avz.policySpace) {
-                    <li><a href="@routes.Application.visualizationFile(qKit.id.modelId + "/" + qKit.id.version + "/" + p.getFileName)">@p.getFileName.toString.split("\\.").last</a></li>
+                    <li><a href="@routes.Application.visualizationFile(p.getFileName + "")">@p.getFileName.toString.split("\\.").last</a></li>
                   }
                 </ul>
               }
