Eliminated content spoofing, added 404 handler, moved to 2.6.11

--- a/datatags-app/app/views/backoffice/users/login.scala.html
+++ b/datatags-app/app/views/backoffice/users/login.scala.html
@@ -7,7 +7,12 @@
           } );
   </script>
 }
-@templates.bsBase("Log in", scripts){
+
+@extraHead = {
+  <meta name="robots" content="noindex, nofollow">
+}
+
+@templates.bsBase("Log in", scripts, extraHead ){
 
 }{
   <div class="row">
