UI improvments (closes #53, closes #55)

--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -468,3 +468,7 @@ ul.localizations {
     margin: .5em auto;
   }
 }
+
+.publicLink {
+  font-family: Menlo, Inconsolata, 'Courier New', monospace;
+}
