Hyperlink DOIs against preferred resolver
https://www.doi.org/doi_handbook/3_Resolution.html#3.8

--- a/datatags-app/app/views/comps/modelVersionMetadataTable.scala.html
+++ b/datatags-app/app/views/comps/modelVersionMetadataTable.scala.html
@@ -37,7 +37,7 @@
           <ul>
           @for( ref <- md.getReferences ) {
             <li>
-              @ref.getText @for(doi<-Option(ref.getDoi)){ <small>(doi:<a href="http://dx.doi.org/@doi" target="_blank">@doi</a>)</small>}
+              @ref.getText @for(doi<-Option(ref.getDoi)){ <small>(doi:<a href="https://doi.org/@doi" target="_blank">@doi</a>)</small>}
               @for(url<-Option(ref.getUrl)){
                 <br>
                 <a href="@url" target="_blank">@url</a>
