Renewed support for invited interviews

--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -472,3 +472,13 @@ ul.localizations {
 .publicLink {
   font-family: Menlo, Inconsolata, 'Courier New', monospace;
 }
+
+.requestedInterview-welcomeMessage {
+  border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.25);
+  background: rgba(202,226,199,0.78);
+  margin: 1em 0;
+  padding: 1em;
+  font-size: 1.5em;
+}
