--- a/datatags-app/app/views/interview/intro.scala.html
+++ b/datatags-app/app/views/interview/intro.scala.html
@@ -18,7 +18,7 @@
   @for( iwm <- interviewWelcomeMessage ) {
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
-        <div class="welcomeMessage">
+        <div class="requestedInterview-welcomeMessage">
           @iwm
         </div>
       </div>
