--- a/datatags-app/app/views/interview/accepted.scala.html
+++ b/datatags-app/app/views/interview/accepted.scala.html
@@ -61,11 +61,11 @@
           </div>
   </div></div></div>
   @requestedInterview match {
-      case Some(interview) => {
+      case Some(reqInt) => {
           <div class="center-block" style="text-align: center">
-            <p> Click the button below to return to your data repository with these tags. </p>
-              <form action="@routes.RequestedInterview.postBackTo(interview.key)" method="POST">
-                <button class="btn btn-primary" type="submit">@interview.returnButtonTitle</button>
+            <p>@reqInt.returnButtonTitle</p>
+              <form action="@routes.RequestedInterview.postBackTo(reqInt.key)" method="POST">
+                <button class="btn btn-primary" type="submit">@reqInt.returnButtonText</button>
               </form>
           </div>
       }
